@@ -80,6 +80,10 @@ for history_name in [\'history\', \'building_history\', \'installation_history\'
                                           name=\'history\', wf_id=workflow_id)\n
   if workflow_item_list != []:\n
     break\n
+\n
+wf_states = context.portal_workflow[workflow_id].states\n
+wf_transitions = context.portal_workflow[workflow_id].transitions\n
+\n
 for workflow_item in workflow_item_list:\n
   # XXX removing str method generate a strange bug\n
   o = newTempBase(portal_object, str(i))\n
@@ -90,9 +94,16 @@ for workflow_item in workflow_item_list:\n
       if key.startswith(compatibility_name):\n
         # Display the workflow state in the state columns\n
         key = key[len(compatibility_name):]\n
-    if key.endswith(\'state\'): # FIXME use translated_state_title here, not state id\n
+    if key.endswith(\'state\'): \n
       key = \'state\'\n
-    # o.edit(key=value)\n
+      value = wf_states[value].title\n
+    if key == \'action\':\n
+      if value != \'\' and value is not None:\n
+        if value == "\'edit\'":\n
+          value = "edit"\n
+        value = wf_transitions[value].title or wf_transitions[value].actbox_name or value\n
+    if same_type(value, \'\'):\n
+      value = context.Localizer.erp5_ui.gettext(value)\n
     o.setProperty(key, value)\n
   result.append(o)\n
 \n
@@ -157,14 +168,18 @@ return result\n
                             <string>_getiter_</string>
                             <string>history_name</string>
                             <string>workflow_item_list</string>
+                            <string>_getitem_</string>
+                            <string>wf_states</string>
+                            <string>wf_transitions</string>
                             <string>workflow_item</string>
                             <string>str</string>
                             <string>o</string>
                             <string>key</string>
                             <string>value</string>
                             <string>compatibility_name</string>
-                            <string>_getitem_</string>
                             <string>len</string>
+                            <string>None</string>
+                            <string>same_type</string>
                           </tuple>
                         </value>
                     </item>
